objects/blng__PaymentTransaction__c.object
<CustomObject>
    <fields>
        <fullName>blng__AVSResponseCode__c</fullName>
        <label>AVS Response Code</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__AVSZip__c</fullName>
        <label>AVS Zip</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>blng__Authorization__c</fullName>
        <label>Authorization</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__BankAccountName__c</fullName>
        <description>The name associated with the Bank Account</description>
        <inlineHelpText>The name associated with the Bank Account</inlineHelpText>
        <label>Bank Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__BankAccountNumber__c</fullName>
        <label>Bank Account Number</label>
        <length>25</length>
        <maskChar>asterisk</maskChar>
        <maskType>lastFour</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>blng__BankAccountType__c</fullName>
        <label>Bank Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__BankAccountType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__BankName__c</fullName>
        <label>Bank Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__BankRoutingCode__c</fullName>
        <description>The valid Routing number of the customer’s Bank</description>
        <inlineHelpText>The valid Routing number of the Bank, this is also called as ABA code</inlineHelpText>
        <label>Bank Routing Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__CardCodeResponse__c</fullName>
        <description>Card Code Response</description>
        <inlineHelpText>CVV/CVV2 has matched or not</inlineHelpText>
        <label>Card Code Response</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__CardExpirationMonth__c</fullName>
        <label>Card Expiration Month</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__CardExpirationMonth</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__CardExpirationYear__c</fullName>
        <label>Card Expiration Year</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__CardExpirationYear</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__CardType__c</fullName>
        <label>Card Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__CardType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__ExceptionMessage__c</fullName>
        <description>Exception Message
When a Transaction is created and Payment is not created against Invoice</description>
        <inlineHelpText>Exception Message
When a Transaction is created and Payment is not created against Invoice</inlineHelpText>
        <label>Exception Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>blng__GatewayDate__c</fullName>
        <label>Gateway Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>blng__GatewayID__c</fullName>
        <label>Response Gateway ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__GatewayStatus__c</fullName>
        <label>Gateway Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__PaymentGatewayStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__IsPaymentProcessedSuccessfully__c</fullName>
        <defaultValue>false</defaultValue>
        <description>It determines whether the Transaction has created Payment.
This is only for charged transactions.</description>
        <inlineHelpText>It determines whether the Transaction has created Payment.
This is only for charged transactions.</inlineHelpText>
        <label>Payment Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>blng__Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>blng__PaymentGateway__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Gateway</label>
        <referenceTo>blng__PaymentGateway__c</referenceTo>
        <relationshipLabel>Payment Transactions</relationshipLabel>
        <relationshipName>PaymentGatewayTransactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__PaymentMethod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Method</label>
        <referenceTo>blng__PaymentMethod__c</referenceTo>
        <relationshipName>PaymentMethodTransactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__PaymentRun__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Run</label>
        <referenceTo>blng__PaymentRun__c</referenceTo>
        <relationshipName>PaymentRunTransactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__ReasonCode__c</fullName>
        <label>Reason Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>blng__RequestCreditCardNumber__c</fullName>
        <label>Request - Credit Card Number</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__RequestInvoice__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Invoice</label>
        <referenceTo>blng__Invoice__c</referenceTo>
        <relationshipName>RequestInvoiceTransactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__RequestTransactionType__c</fullName>
        <label>Request - Transaction Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__RequestTypeOfPayment__c</fullName>
        <label>Request - Type Of Payment</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__ResponseCode__c</fullName>
        <label>Response Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__ResponseMessage__c</fullName>
        <label>Response Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__ResponseStatus__c</fullName>
        <label>Response Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__Response__c</fullName>
        <label>Response</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__PaymentTransactionStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Transaction</label>
        <referenceTo>blng__PaymentTransaction__c</referenceTo>
        <relationshipName>ParentTransactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__PaymentTranscationType</valueSetName>
        </valueSet>
    </fields>
    <label>Payment Transaction</label>
    <listViews>
        <fullName>blng__All</fullName>
        <columns>NAME</columns>
        <columns>blng__PaymentGateway__c</columns>
        <columns>blng__RequestTransactionType__c</columns>
        <columns>blng__RequestTypeOfPayment__c</columns>
        <columns>blng__Type__c</columns>
        <columns>blng__Account__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>blng__TranscationPaymentRun</fullName>
        <columns>NAME</columns>
        <columns>blng__PaymentRun__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>blng__PaymentRun__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>TranscationPaymentRun</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>TRX-{000000000}</displayFormat>
        <label>Payment Transaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>